--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
 </body>
 <!--Git = Version Control System
 Put Project in Git
+> Make Changes 
+>Test - Repeat
+> Then add to Git and committ to Git
 Put Local Git in Github-->
 </html>
