--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Okcoders 2019</title>
 </head>
 <body>
-    <h1>Welcome to Week 1</h1>
+    <script>
+        /*Command interface to JS only*/
+        document.write("Welcome to Javascript I everybody.");
+        </script>
 </body>
 <!--Git = Version Control System
 Put Project in Git
