Add document.write JS

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <script>
         /*Command interface to JS only*/
         document.write("Welcome to Javascript I everybody.");
+        var txt = "Katie Bain";
+        document.write("<p>Name: " + txt.bold() + "</p>");
+        document.write(28/3);
+        document.write("<br/>");
+        document.write(6*127);
+
+        /*Professor's take on it.*/
+        document.write("<h1>Katie Bain</h1>");
+        document.write("<div>Age: " + (28 / 3) + "</div>");
+        document.write("<div>Day: " + (20 * 127) + "</div>");
+        
         </script>
 </body>
 <!--Git = Version Control System
