Add variables and prompt with doc

--- a/index.html
+++ b/index.html
@@ -20,7 +20,23 @@
         document.write("<h1>Katie Bain</h1>");
         document.write("<div>Age: " + (28 / 3) + "</div>");
         document.write("<div>Day: " + (20 * 127) + "</div>");
-        
+
+        /*Professor take on variables.*/
+        var age = prompt("User's Age?");
+        var day = prompt("User's Day of Birth?");
+        var name = prompt("User's Name?");
+        document.write ("<h1>" + name + "</h1>");
+        document.write ("<div>Age: " + (age /3) + "</div>");
+        document.write("Age x Day: " + age * day);
+
+        var age = 42;
+        var day = 20;
+        var name = "Bobby Rockers";
+        document.write ("<h1>" + name + "</h1>");
+        document.write ("<div>Age: " + (age /3) + "</div>");
+        document.write("Age x Day: " + age * day);
+
+
         </script>
 </body>
 <!--Git = Version Control System
