Added Booleans and Flow Control Examples

--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
         document.write ("<div>Age: " + (age /3) + "</div>");
         document.write("Age x Day: " + age * day);
 
+        /*Boolean Operators*/
+        document.write("<br/>");
+        document.write(42 === (21*2));
+        document.write("<br/>");
+        document.write( false || true);
+        document.write("<br/>");
+        document.write( ("Bob" === "Bob") || true);
+
+        /*Flow Control - Last Piece */
+        document.write("<br/>");
+        var age = prompt("User's Age?");
+        var name = prompt("User's Name?");
+         if(age > 55){
+            document.write("User is Old");
+         } else {
+             document.write("User is Young");
+         }
+        
 
         </script>
 </body>
