Add While Loop example

--- a/index.html
+++ b/index.html
@@ -56,6 +56,19 @@
             document.write("User is Just Right");
          }
         
+        //  Shortcut to Comment and Un-Commnt: CTRL+/
+         // Other way to write it:
+         // NESTING
+         // age > 25 && age < 55
+
+         /* For and While Loops */
+         document.write("<br/>");
+         var number = prompt("Count to what?");
+         while(number < 100){
+            number++;
+            document.write("Number " + number + "<br/>");
+         }
+
 
         </script>
 </body>
